apex-intro/force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Junction object to track which products are in which warehouses.</description>
    <label>Inventory</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>