apex-intro/force-app/main/default/objects/Inventory__c/fields/Required_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Required_Capacity__c</fullName>
    <description>The amount of space required in a Warehouse to store this inventory.</description>
    <formula>Quantity__c *  Product__r.Size__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>